--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; scroll-behavior: smooth; }
+
+@font-face {
+    font-family: "Poppins";
+    src: local("Poppins"), url(./assets/fonts/Poppins/Poppins-Regular.ttf) format("truetype");
+}
 body {
-    font-family: 'Poppins';
-    margin: 0 5px;
+    margin: 0;
+}
+
+* {
+    font-family: 'Poppins' !important;
 }
