--- a/src/app/landing-component/landing-component.component.scss
+++ b/src/app/landing-component/landing-component.component.scss
@@ -91,15 +91,10 @@
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
-    line-height: 30px;
-    /* identical to box height */
-
-
-    /* Navy */
-
+    line-height: 44px;
     color: #27187E;
-
     mix-blend-mode: normal;
+    margin: 0;
 }
 
 .notify-me-button {
